# keras_semantic_bert_example

./: .gitignore  README.md  Semantic_Similarity_with_bert.ipynb  pyproject.toml  total_semantic_similarity.py
