[tool.poetry]
name = "semantic_similarity_with_bert"
version = "0.1.0"
description = ""
authors = ["rak"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^3.5.1"
jupyter = "^1.0.0"
lab = "^6.2"
jupyterlab = "^2.2.9"
pandas = "^1.1.4"
tensorflow-cpu = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
